Fix z-index

--- a/Frontend/public/css/EmployeePage.css
+++ b/Frontend/public/css/EmployeePage.css
@@ -202,6 +202,7 @@ top: 0;
 overflow-y: auto;
 transition: 0.6s ease;
 transition-property: left;
+z-index: 200;
 }
 
 header {
