--- a/Frontend/public/css/EmployeeReject.css
+++ b/Frontend/public/css/EmployeeReject.css
@@ -138,6 +138,7 @@ top: 0;
 overflow-y: auto;
 transition: 0.6s ease;
 transition-property: left;
+z-index: 200;
 }
 
 header {
