--- a/Frontend/public/css/EmployeeRejectpro.css
+++ b/Frontend/public/css/EmployeeRejectpro.css
@@ -168,6 +168,7 @@ top: 0;
 overflow-y: auto;
 transition: 0.6s ease;
 transition-property: left;
+z-index: 200;
 }
 
 header {
