--- a/Frontend/public/css/Formstyle.css
+++ b/Frontend/public/css/Formstyle.css
@@ -275,7 +275,7 @@ textarea:focus {
     cursor: pointer;
 }
 .pdf-icon{
-    height: 300px;
+    height: 200px;
 
 }
 /* Larger Checkbox Styling */
@@ -343,6 +343,7 @@ top: 0;
 overflow-y: auto;
 transition: 0.6s ease;
 transition-property: left;
+z-index: 200;
 }
 
 header {
